--- a/Transaction/booking.html
+++ b/Transaction/booking.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header class="hero">
-    <h1>Blissful Bihar</h1>
+    <h1>Jharkhand</h1>
     <p class="tagline">Blockchain Powered Tourism Payments</p>
   </header>
 
